AnnotationAddedEvent phrased in terms of Annotation.  Unify highlight/reference/assessment endpoints
